--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">COMP4020-UI2-Prototype</string>
+    <string name="app_name">Design B</string>
 </resources>
